finalice el proyecto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body id="home" class="principal">
         <div id="homeBanner"> <a href="index.html">
-            <img class="avatar" src="assets/loguito.png" alt=""> </a>
+            <img class="avatar" src="assets/logo.png" alt=""> </a>
             <header>
                 <ul class="menu">
                 <li><a href="/views/servicios.html">servicios</a></li>
